rework job handling